hard-gists/5856269/run.log
=== Docker Run Log for 5856269 ===
Started at: Mi 29. Okt 16:06:12 CET 2025

[2025-10-29 16:06:12] START: Running container for 5856269
[2025-10-29 16:06:12] SUCCESS: Container 1bb94131fac6244b424de07e2ba32ef04bda1848792daa73023ce05d45f091bd started for 5856269
=== Container logs for 5856269 ===
  File "/snippet.py", line 30
    print "Failed to start session."
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5856269 ===
[2025-10-29 16:06:15] INFO: Container 1bb94131fac6244b424de07e2ba32ef04bda1848792daa73023ce05d45f091bd has stopped
